--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="skill-row">
           <img class="android" src="images\android.png" alt="" >
           <h3>Android development and customisation</h3>
-          <p>I have always been into Android operating system and its tweaks. I started flashing custom ROMs and modules in androi devices when I was 14. Since then, I have always been keen to learn more about it.</p>
+          <p>I have always been into Android operating system and its tweaks. I started flashing custom ROMs and modules in android devices when I was 14. Since then, I have always been keen to learn more about it.</p>
         </div>
       </div>
       <hr>
@@ -51,7 +51,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/wasif-jawed-a5b542219/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/wxsifj">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://red1mist.github.io/mysite/">Website</a>
       <p class="cop">©2022 Md Wasif Jawed.</p>
     </div>
 
